winterplexus-force-industry-codes/src/objects/NAICS__c.object
<CustomObject>
    <description>NAICS and SIC codes, descriptions.</description>
    <fields>
        <fullName>Industry_Sector__c</fullName>
        <description>Industry sector</description>
        <inlineHelpText>Industry sector.</inlineHelpText>
        <label>Industry_Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Subsector__c</fullName>
        <description>Industry subsector</description>
        <inlineHelpText>Industry subsector.</inlineHelpText>
        <label>Industry_Subsector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code_2007__c</fullName>
        <description>NAICS code 2007</description>
        <inlineHelpText>NAICS code 2007.</inlineHelpText>
        <label>NAICS_Code_2007</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description_2007__c</fullName>
        <description>NAICS description 2007.</description>
        <inlineHelpText>NAICS description 2007</inlineHelpText>
        <label>NAICS_Description_2007</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <description>SIC code</description>
        <inlineHelpText>SIC code.</inlineHelpText>
        <label>SIC_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Description__c</fullName>
        <description>SIC description</description>
        <inlineHelpText>SIC description.</inlineHelpText>
        <label>SIC_Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NAICS</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Industry_Sector__c</columns>
        <columns>Industry_Subsector__c</columns>
        <columns>NAICS_Code_2007__c</columns>
        <columns>NAICS_Description_2007__c</columns>
        <columns>SIC_Code__c</columns>
        <columns>SIC_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAICSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>